fix collapse

--- a/src/app/components/add/add.component.css
+++ b/src/app/components/add/add.component.css
@@ -14,7 +14,41 @@ form {
     margin: 0.4rem 2rem;
 }
 
-.btn {
-    background-color: #ffd803;
-    color: #272343;
+/* custom close button */
+.custom_abhinav_close_button {
+    background-color: #ffffff00;
+    color: black;
+    width: 8.5em;
+    height: 2.9em;
+    border: #3654ff 0.2em solid;
+    border-radius: 33px;
+    text-align: right;
+    transition: all 0.6s ease;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-right: 1.5em;
+    margin: auto;
+}
+
+.custom_abhinav_close_button:hover {
+    background-color: #3654ff;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.custom_abhinav_close_button svg {
+    width: 1.6em;
+    margin: -0.2em 0.8em 0 0;
+    transition: all 0.6s ease;
+}
+
+.custom_abhinav_close_button:hover svg {
+    transform: translateX(5px);
+}
+
+.custom_abhinav_close_button .text {
+    margin: 0 1.5em;
 }
